fixed leaks - only good test is PerformanceTest - have to update the other ones. I reached 490MB on my laptop (win32/2gb ram)