@@ -17,6 +17,8 @@
     <path id="DirectCache.classpath">
         <pathelement location="bin"/>
         <path refid="JUnit 4.libraryclasspath"/>
+        <pathelement location="lib/lambdaj-2.3.1-with-dependencies.jar"/>
+        <pathelement location="lib/hamcrest-all-1.3.0RC2.jar"/>
         <pathelement location="lib/slf4j-api-1.6.1.jar"/>
         <pathelement location="lib/logback-classic-0.9.26.jar"/>
         <pathelement location="lib/logback-core-0.9.26.jar"/>
@@ -80,38 +82,14 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-    <target name="BaseTest">
-        <mkdir dir="${junit.output.dir}"/>
-        <junit fork="yes" printsummary="withOutAndErr">
-            <formatter type="xml"/>
-            <test name="org.directcache.test.BaseTest" todir="${junit.output.dir}"/>
-            <classpath refid="DirectCache.classpath"/>
-        </junit>
-    </target>
-    <target name="ConcurrencyTest">
-        <mkdir dir="${junit.output.dir}"/>
-        <junit fork="yes" printsummary="withOutAndErr">
-            <formatter type="xml"/>
-            <test name="org.directcache.test.ConcurrencyTest" todir="${junit.output.dir}"/>
-            <classpath refid="DirectCache.classpath"/>
-        </junit>
-    </target>
     <target name="DirectCache">
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
             <test name="org.directcache.test.BaseTest" todir="${junit.output.dir}"/>
             <test name="org.directcache.test.ConcurrencyTest" todir="${junit.output.dir}"/>
-            <test name="org.directcache.test.LoadTest" todir="${junit.output.dir}"/>
-            <test name="org.directcache.test.PerformanceTest" todir="${junit.output.dir}"/>
-            <jvmarg line="-Xmx1024m -Djava.util.logging.config.file=logging.properties"/>
-            <classpath refid="DirectCache.classpath"/>
-        </junit>
-    </target>
-    <target name="LoadTest">
-        <mkdir dir="${junit.output.dir}"/>
-        <junit fork="yes" printsummary="withOutAndErr">
-            <formatter type="xml"/>
+            <test name="org.directcache.test.FiltersTest" todir="${junit.output.dir}"/>
+            <test name="org.directcache.test.FunctionalTest" todir="${junit.output.dir}"/>
             <test name="org.directcache.test.LoadTest" todir="${junit.output.dir}"/>
             <classpath refid="DirectCache.classpath"/>
         </junit>
@@ -121,6 +99,7 @@
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
             <test name="org.directcache.test.PerformanceTest" todir="${junit.output.dir}"/>
+            <jvmarg line="-Xms512m -Xmx512m -XX:MaxPermSize=512m -Xss512k"/>
             <classpath refid="DirectCache.classpath"/>
         </junit>
     </target>
